--- a/gitfile1.Rmd
+++ b/gitfile1.Rmd
@@ -32,3 +32,5 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 #Github setup test
 
 My first github file
+
+second change 
