--- a/gitfile1.Rmd
+++ b/gitfile1.Rmd
@@ -34,3 +34,5 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 My first github file
 
 second change 
+
+third change 
