--- a/workshop3.Rmd
+++ b/workshop3.Rmd
@@ -7,39 +7,18 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
 ```
 
-##### R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. [This is a link.](http://rmarkdown.rstudio.com)
-
-[link](http://rmarkdown.rstudio.com) 
-
-include some calculation: 
+### Data wrangling
 
 ```{r}
-2+2+6
+#data loading
+
+data<-read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2021/2021-05-18/survey.csv')
+
+data%>%head()
+
 ```
 
-```{r}
-
-# to create a coding: Command+Option+i
-```
-
-
-
-When you click the ***Knit*** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
